<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main"
    tools:context=".RegActivity">

    <ImageView
        android:id="@+id/LogoPic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        tools:srcCompat="@drawable/piclogo" />

    <TextView
        android:id="@+id/regLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="monospace"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/regLabel"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/brightText"
        android:textSize="12pt" />

    <EditText
        android:id="@+id/userLogin"
        android:fontFamily="monospace"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/userLoginHint"
        android:textColorHint="@color/HintText" />

    <EditText
        android:id="@+id/userEmail"
        android:fontFamily="monospace"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/userEmailHint"
        android:textColorHint="@color/HintText" />


    <EditText
        android:id="@+id/userPassword"
        android:fontFamily="monospace"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/userPasswordHint"
        android:textColorHint="@color/HintText"/>

    <EditText
        android:id="@+id/userPasswordConfirm"
        android:fontFamily="monospace"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/userPasswordConfirmHint"
        android:textColorHint="@color/HintText"/>

    <CheckBox
        android:id="@+id/userAgreement"
        android:fontFamily="monospace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginStart="25dp"
        android:text="@string/userAgreement"
        android:textColor="@color/brightText"/>

    <Button
        android:id="@+id/regButton"
        android:fontFamily="monospace"
        android:layout_width="225dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/brightElements"
        android:textColor="@color/black"
        android:text="@string/regButtonText"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/entryLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="monospace"
        android:text="@string/entryLinkText"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="25dp"
        android:textColor="@color/HintText"
        android:textSize="14sp" />

</LinearLayout>